# webpage

./: .gitignore  .gitpod.yml  CNAME  Cargo.toml  README.md  Trunk.toml  index-69dbe3efbc7f9894.js  index-69dbe3efbc7f9894_bg.wasm  index-b609a0af3b2ff7d1.js  index-b609a0af3b2ff7d1_bg.wasm  index-c850d0e2c1dbf587.js  index-c850d0e2c1dbf587_bg.wasm  index-dark.html  index-ee5a00cef9645f0.js  index-ee5a00cef9645f0_bg.wasm  index.html  manifest.webmanifest  personal-webpage-2887c6fafe123014.js  personal-webpage-2887c6fafe123014_bg.wasm  personal-webpage-7bc7c1f5dd1dca12.js  personal-webpage-7bc7c1f5dd1dca12_bg.wasm  personal-webpage-c5bc266973a416dd.js  personal-webpage-c5bc266973a416dd_bg.wasm  personal-webpage-d52b73476fb7a7f8.js  personal-webpage-d52b73476fb7a7f8_bg.wasm  service-worker.js  service-worker_bg.wasm  sw.js
.github/workflows/: build.yml  release.yml
src/: init.js  init.rs  main.rs  manifest.webmanifest  sw.js  worker.rs
src/components/: about.rs  contact.rs  cursor_pointer.rs  footer.rs  header.rs  mod.rs  pre_loader.rs  projects.rs  scroll_progress_bar.rs  skills.rs  welcome.rs
src/css/: colors.css  dark.css  google-fonts.css  style.css
src/js/: init.js  plugins.js
src/utils/: dark_mode.rs  images.rs  navigation.rs
