[package]
name = "personal-webpage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 'z'
lto = true

[dependencies]
yew = "0.19.3" 
web-sys = {version="0.3.56", features = [
    "console",
    "Document",
    "HtmlElement",
    "MouseEvent",
    "DomRect",
    "DomTokenList"
]} 
js-sys = "0.3.56" 
wasm-bindgen = "0.2.79" 
dark-light = "0.2.1"   